samples/_failures_safe/1761129895_0d7643_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bfadb8c.c: In function ‘main’:
./samples/SAFE/__tmp_8bfadb8c.c:145:16: error: missing terminating " character
  145 |         printf("\nAvailable operations:\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8bfadb8c.c:145:9: error: expected expression at end of input
  145 |         printf("\nAvailable operations:\n
      |         ^~~~~~
./samples/SAFE/__tmp_8bfadb8c.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bfadb8c.c:145:9: error: expected declaration or statement at end of input
